--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
 # dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+*/node_modules
+*/.pnp
+*.pnp.*
+*.yarn/*
+*!.yarn/patches
+*!.yarn/plugins
+*!.yarn/releases
+*!.yarn/versions
 
 # testing
 /coverage
 
 # next.js
-/.next/
-/out/
+*/.next/
+*/out/
 
 # production
-/build
+*/build
 
 # misc
-.DS_Store
+*.DS_Store
 *.pem
 *.idea
 
@@ -30,11 +30,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+*.env*
 
 # vercel
-.vercel
+*.vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+frontend/next-env.d.ts
