--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,9 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
-    "react-day-picker": "^9.11.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.3.1"
